--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,12 +11,15 @@ body{
     width: 100%;
     height: 100vh;
 }
+
+/* caratula */
 .CARATULA {
     background: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
+    justify-content: space-around;
 }
 .CARATULA figure{
     width: 100px;
@@ -45,6 +48,7 @@ height: 100%;
     text-align: center;
     justify-content: center;
     padding: 10px;
+    border-radius: 30px;
 }
 .SEM1 div p{
     width: 90%;
