--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -58,22 +58,45 @@ height: 100%;
     font-weight: bold;
     font-family: cursive;
 }
-/* .SEM1 .title{
+.SEM1 .platon{
+    width: 100%;
+    height: 150px;
     position: absolute;
-    top: 29px;
-    left: 9px;
-    font-size: 34px;
+    /* top: 78px; */
+    /* left: 9px; */
+    bottom: -15px;
+    right: 0;
+    font-size: 27px;
     color: #17bbd1;
-    transform: rotate3d(1, 1, 1, 328deg);
-} */
-#flipbook .pg-3{
-    background: white;
+    display: flex;
+    justify-content: flex-end;
 }
-#flipbook .pg-4{
-    background: white;
+.platon img{
+    height: 100%;
 }
 
 
+#flipbook .SEM2{
+    background: rgb(125, 245, 209);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.SEM2 div{
+    width: 90%;
+    /* height: 200px; */
+    border: 5px solid #32e221;
+    background: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    padding: 10px;
+    border-radius: 30px;
+}
 
 
 
