--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,15 +2,18 @@
     padding: 0;
     margin: 0;
 }
+::-webkit-scrollbar {
+    display: none;
+}
 body{
     width: 100%;
     height: 100vh;
-    background: rgb(0, 0, 0);
+    background: rgba(10, 109, 101, 0.671);
+    display: flex;
+    justify-content: center;
 }
-#flipbook{
-    width: 100%;
-    height: 100vh;
-}
+
+
 
 /* caratula */
 .CARATULA {
@@ -21,94 +24,21 @@ body{
     text-align: center;
     justify-content: space-around;
 }
-.CARATULA figure{
-    width: 100px;
-    height: 100px;
-}
-.CARATULA img{
-width: 100%;
-height: 100%;
-}
-/* SEMANA 1 */
-.SEM1{
-    background: #f0c6aa;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-}
-.SEM1 div{
-    width: 90%;
-    /* height: 200px; */
-    border: 5px solid #f39a7f;
-    background: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    padding: 10px;
-    border-radius: 30px;
-}
-.SEM1 div p{
-    width: 90%;
-}
-.SEM1 div p:nth-child(1){
-    color: #17d164;
-    font-weight: bold;
-    font-family: cursive;
-}
-.SEM1 .platon{
+
+img{
     width: 100%;
-    height: 150px;
-    position: absolute;
-    /* top: 78px; */
-    /* left: 9px; */
-    bottom: -15px;
-    right: 0;
-    font-size: 27px;
-    color: #17bbd1;
-    display: flex;
-    justify-content: flex-end;
-}
-.platon img{
     height: 100%;
-}
+    }
 
-
-#flipbook .SEM2{
-    background: rgb(125, 245, 209);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.SEM2 div{
-    width: 90%;
-    /* height: 200px; */
-    border: 5px solid #32e221;
-    background: rgb(255, 255, 255);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    padding: 10px;
-    border-radius: 30px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    #fullscreenButton {
+        position: fixed;
+        right: 10px;
+        padding: 10px;
+        bottom: 10px;
+        background-color: #575555;
+        border-radius: 100%;
+        color: #fff;
+        border: none;
+        outline: none;
+        cursor: pointer;
+    }
